--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
+    <% else %>
+      <%= link_to "Sign Up", 'signup' %> | <%= link_to "Sign In", '/signin' %>
+    <% end %>
+
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
+
     <%= yield %>
   </body>
 </html>
